# ComfyUI-TemplateVars

./: README.md  __init__.py  core.py  nodes.py  nodes_v3.py  pyproject.toml
.github/workflows/: publish.yml
js/: template_vars.js
workflow/: example_workflow.json
